[tool.poetry]
name = "alg"
version = "0.1.0"
description = ""
authors = ["Vladimir <vladimir@MacBook.local>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
